--- a/WEB/src/app/home/key-word-search-dialog.html
+++ b/WEB/src/app/home/key-word-search-dialog.html
@@ -1,3 +1,4 @@
+<button type="button" class="close" (click)="onNoClick()">&times;</button>
 <div class="class-box">
   <p class="video-text"><a (click)="playLessonForTopic(topic)" style="cursor:pointer"><i class="fas fa-video"></i>
       {{topic.displayName}}</a></p>
