--- a/WEB/src/app/public/register/register.component.html
+++ b/WEB/src/app/public/register/register.component.html
@@ -66,7 +66,7 @@
                                 <p class="text-center">
                                     <button type="button" class="btn-login" (click)="confirmRegisterUser()">Register</button>
                                 </p>
-                                <p class="text-center"><a class="forget-pass dont" [routerLink]="['login']">Already
+                                <p class="text-center"><a class="forget-pass dont" [routerLink]="['/login']">Already
                                         have an account?Login</a></p>
 
                             </div>
