--- a/WEB/src/app/home/content-mgmnt/topics/video-dialog.html
+++ b/WEB/src/app/home/content-mgmnt/topics/video-dialog.html
@@ -1,4 +1,6 @@
-<button type="button" class="close" (click)="onNoClick()">&times;</button>
-<h5>{{topic.displayName}}</h5>
+<button type="button" style="color:#fff" class="close" (click)="onNoClick()">&times;</button>
+<h5 style="background: #ED683D;
+color: #fff;
+text-align: center;">{{topic.displayName}}</h5>
 <video [src]="videoURL" controls controlsList="nodownload">
 </video>
