--- a/WEB/src/app/home/home.component.html
+++ b/WEB/src/app/home/home.component.html
@@ -35,8 +35,8 @@
                   </mat-menu>
                   <mat-menu #info="matMenu">
                       <div class="timer-container">
-                            <img src="assets/images/blue-hourglass.gif" alt="">
-                       <p class="timer">{{timeLeft}} Days</p>
+                            <img class="timer-icon" src="assets/images/blue-hourglass.gif" alt="">
+                       <p class="timer">{{timeLeft}} days remaining</p>
                       </div>
                   </mat-menu>
             </div>
