--- a/WEB/src/app/home/home.component.scss
+++ b/WEB/src/app/home/home.component.scss
@@ -131,7 +131,7 @@ padding-right: 15px;
 .footer-container p{font-size:12px;}
 
 .topics h4{font-size:18px;color:#002C58; font-weight:400}
-.logo {float:left; width:205px;}
+.logo {float:left; width:auto;}
 
 .search{float:left; margin-left:30px; margin-top:8px; width:50%}
 .search input[type='text']{ border:0; background:none; width:80%; font-size:15px; color:#BDBDBD}
@@ -303,8 +303,9 @@ padding-right: 15px;
     display: inline-block;  
   }
   .timer-icon {
-    font-size: 18px;
-    color: darkgoldenrod;
+    height: 25px;
+    width: 25px;
     position: relative;
-    left: 12px;
+    left: 16px;
+    bottom: 3px;
   }
