--- a/WEB/src/app/home/content-mgmnt/content-mgmnt.component.scss
+++ b/WEB/src/app/home/content-mgmnt/content-mgmnt.component.scss
@@ -322,9 +322,13 @@ box-shadow: 1px 5px 5px 0px rgba(0,0,0,0.2); text-align:center; margin-bottom:30
  .tabled {
 	 height: 100%;
 	 max-height: 383px;
+	 overflow-y: scroll;
+ }
+ td {
+	 font-size: 15px!important;
  }
  small {
-	 font-size: 13px;
+	 font-size: 12px!important;
  }
  .period-btn {
 	background: #ED683D;
