changes for school and ui and add backedn support for question

--- a/WEB/src/app/public/login/login.component.html
+++ b/WEB/src/app/public/login/login.component.html
@@ -22,6 +22,8 @@
 							<button type="button" class="btn-login" (click)="login()">Let me in</button>	
 						</p>
 						<p class="text-center"><a class="forget-pass dont" [routerLink]="['/registeruser']" (click)="registerUser()">Don't have an account? Sign Up</a></p>
+						<p class="text-center"><a class="forget-pass dont"  [routerLink]="" (click)="activateProduct()">Don't Activate Product Yes? Activate Product</a></p>
+
 					</div>
 				</div>
 				<div class="login-form" *ngIf="displayView=='RPASSWORD'">
