--- a/WEB/src/app/home/content-mgmnt/topics/topic.scss
+++ b/WEB/src/app/home/content-mgmnt/topics/topic.scss
@@ -283,3 +283,9 @@ video {
 	  border-left: 1px solid #ddd;
 	  border-right: 1px solid #ddd;
   }
+  .search-icon {
+    float: right;
+    position: relative;
+    bottom: 36px;
+    right: 35px;
+  }
