--- a/LICENSE_BUILDER/WEB/src/app/public/license/license.html
+++ b/LICENSE_BUILDER/WEB/src/app/public/license/license.html
@@ -58,7 +58,7 @@
                     <ng-container matColumnDef="download">
                         <th mat-header-cell *matHeaderCellDef> Download </th>
                         <td mat-cell *matCellDef="let element">
-                            <mat-icon (click)="downloadLicenseFile(element)"><i class="material-icons">cloud_download</i></mat-icon>
+                            <mat-icon (click)="editLicense(element)"><i class="material-icons">edit</i></mat-icon>
                         </td>
                     </ng-container>
 
