--- a/WEB/src/app/home/content-mgmnt/topics/topic.html
+++ b/WEB/src/app/home/content-mgmnt/topics/topic.html
@@ -79,6 +79,7 @@
             </div>
             <li class="borders"><i  class="fa fa-clock" aria-hidden="true"></i> {{topic.playFileTime}} Mins.</li>
             <li><a (click)="markFavorites(topic)"><i class="fa fa-heart like-icon" aria-hidden="true"></i></a></li>
+            <li><a (click)="viewQuestions(topic)"><i class="fa fa-question-circle" aria-hidden="true"></i></a></li>
             <li *ngIf="user.role=='ADMIN'" class="borders"><a (click)="editTopicDetail(topic)" style="cursor:pointer">
               <i class="fas fa-pen edit-icon"></i></a></li>
             <li *ngIf="user.role=='ADMIN'"><a (click)="deleteTopicDetail(topic)" style="cursor:pointer">
